--- a/src/html/views/main.pug
+++ b/src/html/views/main.pug
@@ -151,7 +151,23 @@ main.ladines-main
           p.ladines-main-block__content
             span.ladines-main-block__elem 2019
             span.ladines-main-block__elem Боевик
-    //section.ladines-main-block.ladines-main-block__carousel
+    section.ladines-main-block
+      h2.ladines-main-block__header Новости
+      p.ladines-main-block__subtitle Коллекция лучших мультфильмов для детей и родителей 
+      .ladines-main-block__container
+        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
+          img.ladines-main-block__img(src="img/img5.jpg", alt="")
+          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
+          img.ladines-main-block__img(src="img/img6.jpg", alt="")
+          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
+          img.ladines-main-block__img(src="img/img7.jpg", alt="")
+          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
+          img.ladines-main-block__img(src="img/img8.jpg", alt="")
+          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
+    section.ladines-main-block.ladines-main-block__carousel
       h2.ladines-main-block__header Planeta online
       .ladines-main-block__container.ladines-main-block__container-carousel.owl-carousel
         a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
@@ -181,19 +197,3 @@ main.ladines-main
       .ladines-main-block__carousel-btn
         button.ladines-main-block__carousel-left
         button.ladines-main-block__carousel-right
-    section.ladines-main-block
-      h2.ladines-main-block__header Новости
-      p.ladines-main-block__subtitle Коллекция лучших мультфильмов для детей и родителей 
-      .ladines-main-block__container
-        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
-          img.ladines-main-block__img(src="img/img5.jpg", alt="")
-          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
-        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
-          img.ladines-main-block__img(src="img/img6.jpg", alt="")
-          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
-        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
-          img.ladines-main-block__img(src="img/img7.jpg", alt="")
-          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
-        a.ladines-main-block__item.ladines-main-block__item--lg(href="#")
-          img.ladines-main-block__img(src="img/img8.jpg", alt="")
-          p.ladines-main-block__text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
