--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -102,6 +102,39 @@ html, body {
       content: '';
       top: -8px;
     }
+
+    &__social {
+
+      &-nav {
+        display: flex;
+      }
+
+      span {
+        font-size: 15px;
+        font-weight: 400;
+        letter-spacing: 0.3px;
+        color: #ffffff;
+        margin-right: 26px;
+      }
+
+      &-link {
+        border-radius: 50%;
+        width: 43px;
+        height: 43px;
+        border: 1px solid #2fadcd;
+        margin-right: 23px;
+        display: inline-block;
+        display: flex;
+
+        img {
+          margin: auto;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
   }
 
   &-header,
@@ -165,7 +198,7 @@ html, body {
   &-main {
     &-slider {
       height: 479px;
-      margin-top: 22px;
+      margin-top: 8px;
       position: absolute!important;
       max-height: 479px;
     }
@@ -175,10 +208,10 @@ html, body {
 
       &__controls {
         position: relative;
-        top: 245px;
+        top: 225px;
         display: flex;
         justify-content: space-between;
-        width: 85%;
+        width: 83%;
         z-index: 100;
         margin: auto;
       }
@@ -212,33 +245,33 @@ html, body {
       }
 
       &__prev {
-        margin-left: 80px;
-        background: transparent url(../img/arrow.png)no-repeat;
-        width: 27px;
-        height: 42px;
+        background:  rgba(255, 255, 255, 0.2) url(../img/arrow.png)no-repeat center center;
+        width: 91px;
+        height: 91px;
         border: none;
         outline: none;
         cursor: pointer;
+        position: relative;
+        border-radius: 50%;
 
         &:hover {
-          background: transparent url(../img/arrow-hover.png)no-repeat;
+          background: rgba(255, 255, 255, 0.2) url(../img/arrow-hover.png)no-repeat center center;
           transform: rotate(-180deg);
         }
       }
 
       &__next {
-        margin-right: 80px;
-        margin-left: 80px;
-        background: transparent url(../img/arrow.png)no-repeat;
-        width: 27px;
-        height: 42px;
+        background: rgba(255, 255, 255, 0.2) url(../img/arrow.png)no-repeat center center;
+        width: 91px;
+        height: 91px;
         border: none;
         outline: none;
+        border-radius: 50%;
         transform: rotate(-180deg);
         cursor: pointer;
 
         &:hover {
-          background: transparent url(../img/arrow-hover.png)no-repeat;
+          background: rgba(255, 255, 255, 0.2) url(../img/arrow-hover.png)no-repeat center center;
           transform: rotate(0deg);
         }
       }
@@ -266,11 +299,15 @@ html, body {
       margin-top: 67px;
 
       &__carousel {
-        border: 11px solid #1dee93;
+        border-radius: 6px;
         margin: 70px -35px 0;
-        background: #fff;
+        background-color: #2c2c2c;
         padding: 44px 0 30px;
         position: relative;
+
+        .ladines-main-block__header {
+          padding-left: 54px;
+        }
 
         .owl-item {
           padding: 15px 0 0;
@@ -286,7 +323,7 @@ html, body {
         }
 
         .ladines-main-block__container {
-          padding: 0 73px;
+          padding: 0 110px;
           width: auto;
         }
 
@@ -299,10 +336,11 @@ html, body {
         }
 
         &-left {
-          background: transparent url(../img/arrow-hover.png)no-repeat;
-          width: 27px;
+          background: transparent url(../img/arrow-hover.png)no-repeat 100% 100%;
+          background-size: cover;
+          width: 42px;
           height: 42px;
-          margin-left: 24px;
+          margin-left: 36px;
           transform: rotate(-180deg);
           border: none;
           outline: none;
@@ -313,9 +351,10 @@ html, body {
 
         &-right {
           background: transparent url(../img/arrow-hover.png)no-repeat;
-          width: 27px;
+          background-size: cover;
+          width: 42px;
           height: 42px;
-          margin-right: 24px;
+          margin-right: 36px;
           border: none;
           outline: none;
           cursor: pointer;
@@ -331,11 +370,11 @@ html, body {
         width: 195px;
 
         &--lg {
-          width: 294px;
+          width: 285px;
 
           .ladines-main-block__img {
-            width: 294px;
-            height: 286px;
+            width: 285px;
+            height: 212px;
           }
         }
 
@@ -359,7 +398,7 @@ html, body {
         text-align: left;
         color: #ffffff;
         font-weight: 700;
-        font-size: 40px;
+        font-size: 37px;
         margin: 0;
       }
 
@@ -431,6 +470,34 @@ html, body {
 
       &__sort {
         width: 440px;
+        position: relative;
+
+        &:before {
+          width: 10px;
+          height: 10px;
+          z-index: 1;
+          position: absolute;
+          right: 7px;
+          top: 20px;
+          content: '';
+          background-color: #2c2c2c;
+        }
+
+        &:after {
+          width: 10px;
+          height: 7px;
+          content: '';
+          position: absolute;
+          background: url(../img/select-arr.png)no-repeat;
+          right: 21px;
+          z-index: 2;
+        }
+
+        p {
+          font-size: 24px;
+          color: #c6c6c6;
+          margin: 0 30px 0 0;
+        }
 
         &-input {
           display: none;
@@ -443,125 +510,19 @@ html, body {
           padding-left: 10px;
         }
 
-&-select
-{
-  display: inline-block;
-  width: 160px;
-  height: 34px;
-  line-height: 30px;
-  position: relative;
-}
-
-&-select:before
-{
-  content: ">";
-  display: inline-block;
-  background: white;
-  position: absolute;
-  right: -5px;
-  top: 2px;
-  z-index: 2;
-  width: 30px;
-  height: 26px;
-  text-align: center;
-  line-height: 26px;
-  border: 2px solid #ddd;
-  transform: rotate(90deg);
-  cursor: pointer;
-}
-
-&-select input[name="list"]:not(:checked) ~ .ladines-news-block__sort-text
-{
-  color: black;
-  background: white;
-}
-
-&-select input[name="list"]:checked ~ .ladines-news-block__sort-text
-{
-  background: transparent;
-  color: transparent;
-  z-index: 2;
-}
-
-.ladines-news-block__sort-select#select:disabled ~ .items .ladines-news-block__sort-text
-{
-  background: #eee;
-}
-
-.items
-{
-  display: block;
-  min-height: 30px;
-  position: absolute;
-  border: 2px solid #ddd;
-  overflow: hidden;
-  width: 160px;
-  cursor: pointer;
-}
-
-.ladines-news-block__sort-select#select:not(:checked) ~ .ladines-news-block__sort-items
-{
-  height: 30px;
-}
-
-.items label
-{
-  border-top: 2px solid #ddd;
-  display: none;
-  padding-left: 10px;
-  background: white;
-}
-
-.items label:hover
-{
-  background: #eee;
-  cursor: pointer;
-}
-
-#select:checked ~ .items
-{
-  padding-top: 30px;
-}
-
-#select:checked ~ .items label
-{
-  display: block;
-}
-
-.items input:checked + label
-{
-  display: block!important;
-  border: none;
-  background: white;
-}
-
-#select:checked ~ .bg
-{
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 0;
-  background: rgba(0,0,0,0.4);
-}
-
-a
-{
-  display: block;
-  width: 160px;
-  text-align: center;
-  padding: 5px 0;
-  color: black;
-  text-decoration: none;
-  border: 2px solid #ddd;
-}
-
-a:hover
-{
-  cursor: pointer;
-  border-color: red;
-}
+        &-select {
+          background-color: #2c2c2c;
+          width: 303px;
+          height: 52px;
+          box-shadow: 0 0 22px rgba(0, 0, 0, 0.16);
+          border-radius: 28px;
+          font-size: 16px;
+          font-weight: 700;
+          color: #fff;
+          border: none;
+          outline: none;
+          padding: 0 21px 0 34px;
+        }
       }
 
       &__content {
