--- a/src/html/views/main.pug
+++ b/src/html/views/main.pug
@@ -197,3 +197,31 @@ main.ladines-main
       .ladines-main-block__carousel-btn
         button.ladines-main-block__carousel-left
         button.ladines-main-block__carousel-right
+.ladines-modal
+  .ladines-modal__container
+    .ladines-modal__close
+    .ladines-modal__header
+      h3.ladines-modal__header-title Фаворитка
+      h5.ladines-modal__header-subtitle The favourite
+    .ladines-modal__content
+      .ladines-modal__content-video
+        img(src="img/video.jpg")
+        .ladines-modal__content-mask
+        button.ladines-modal__content-btn
+    .ladines-modal__footer 
+      .ladines-inner__content-poster
+        img.ladines-inner__content-img(src="img/inner.jpg")
+      .ladines-inner__content-description.grid.grid-column
+        .ladines-inner__content-list
+          .ladines-inner__content-item
+            span Год
+            span 2015
+          .ladines-inner__content-item
+            span Страна
+            span Англия
+          .ladines-inner__content-item
+            span Жанр
+            span Комедия
+        span.ladines-inner__content-text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est eopksio laborum. Sed ut perspiciatis unde omnis istpoe natus error sit voluptatem accusantium doloremque eopsloi laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunot explicabo. Nemo ernim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sedopk quia consequuntur magni dolores eos qui rationesopl voluptatem sequi nesciunt. Neque porro quisquameo est, qui dolorem ipsum quia dolor sit amet, eopsmiep consectetur, adipisci velit, seisud quia non numquam eius modi tempora incidunt ut labore et dolore wopeir magnam aliquam quaerat voluptatem eoplmuriquisqu
+        span.ladines-inner__content-slide Развернуть
+
