--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -656,7 +656,7 @@ html, body {
       }
 
       &-slide {
-        color: #1c433f;
+        color: #ee552f;
         font-size: 13px;
         font-weight: 700;
         letter-spacing: 0.26px;
@@ -676,10 +676,12 @@ html, body {
         span {
           width: 110px;
           display: inline-block;
+          color: #2ba5cf;
 
           &:last-child {
             width: auto;
-            font-weight: 700;
+            color: #ffffff;
+            font-weight: 400;
           }
         }
 
@@ -693,6 +695,7 @@ html, body {
         line-height: 26px;
         height: 176px;
         overflow: hidden;
+        color: #c6c6c6;
       }
     }
 
@@ -806,6 +809,108 @@ html, body {
           margin-bottom: 23px;
         }
       }
+    }
+  }
+
+  &-modal {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .8);
+    z-index: 100;
+    overflow-y: scroll;
+
+    &__close {
+      background: url(../img/close.png)no-repeat;
+      width: 42px;
+      height: 42px;
+      position: absolute;
+      right: -63px;
+      cursor: pointer;
+    }
+
+    &__header {
+      padding: 26px 43px;
+      color: #fff;
+
+      &-title {
+        font-size: 40px;
+        font-weight: 700;
+        margin: 0;
+      }
+
+      &-subtitle {
+        font-size: 20px;
+        margin: 0;
+        font-weight: 400;
+        color: #c6c6c6;
+      }
+    }
+
+    &__content {
+      text-align: center;
+      position: relative;
+
+      &:after {
+        background-image: linear-gradient(to right, #f79627 0%, #ee542e 19%, #b3407e 39%, #77417a 57%, #2264af 79%, #2faecd 100%);
+        bottom: 0;
+        content: '';
+        display: block;
+        width: 100%;
+        height: 8px;
+      }
+
+      &-video {
+        margin: auto;
+        position: relative;
+        width: 805px;
+        height: 456px;
+      }
+
+      &-mask {
+        position: absolute;
+        background: rgba(255, 255, 255, .5);
+        top: 0;
+        width: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+
+      &-btn {
+        border: none;
+        outline: none;
+        background: url(../img/play.png)no-repeat;
+        width: 78px;
+        height: 78px;
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    &__footer {
+      margin-top: 70px;
+      padding: 0 80px 75px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__container {
+      background-color: #1b1b1b;    
+      z-index: 101;
+      margin-top: 55px;
+      width: 1097px;
+      border-radius: 10px;
+      margin: 120px auto 60px;
+      position: relative;
     }
   }
 }
